kubernetes/applications/media/servarr/jellyfin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 105
          - 226
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.10.3 # renovate: docker=ghcr.io/jellyfin/jellyfin
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 6000m
              memory: 16Gi
              gpu.intel.com/i915: 1000m
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /mnt/media
            - name: cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: servarr-media-nfs
        - name: cache
          ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes: [ "ReadWriteOnce" ]
                storageClassName: longhorn
                resources:
                  requests:
                    storage: 20Gi
        - name: tmp
          emptyDir: {}
