kubernetes/applications/media/servarr/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Media Player
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Jellyfin
spec:
  ingressClassName: cilium
  rules:
    - host: jellyfin.costanza.cloud
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: web
  tls:
    - hosts:
        - jellyfin.costanza.cloud
      secretName: jellyfin-tls
